--- a/server/app/views/signIn.scala.html
+++ b/server/app/views/signIn.scala.html
@@ -3,7 +3,7 @@
 @import com.mohiva.play.silhouette.core.providers._
 @import bootstrap._
 
-@main("Silhouette - Sign In") {
+@base("Silhouette - Sign In") {
     @request.flash.get("error").map { msg =>
         <div class="col-md-6 col-md-offset-3 alert alert-danger alert-error">
             <a href="#" class="close" data-dismiss="alert">&times;</a>
@@ -25,4 +25,6 @@
             }
         }
     </fieldset>
+} {
+	<button type="submit" class="btn btn-success">Sign in</button>
 }
