--- a/server/app/views/userawarepage.scala.html
+++ b/server/app/views/userawarepage.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)(identity: Option[models.User])
+@(title: String)(identity: Option[models.User])(content: Html)
 
 @base(title)(content){
 	@if(identity.isDefined){
