--- a/server/app/views/base.scala.html
+++ b/server/app/views/base.scala.html
@@ -11,7 +11,7 @@
 <meta name="author" content="">
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
-<title>Starter Template for Bootstrap</title>
+<title>@title</title>
 
 <!-- Bootstrap core CSS -->
 <link href="@routes.Assets.at(
