--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -10,5 +10,8 @@
 	</p>
 
     Scala.js shouts out: <em id="scalajsShoutOut"></em>
+    
+	<script src="@routes.Assets.at("client-jsdeps.js")" type="text/javascript"></script>
+	@playscalajs.html.scripts("/assets", projectName = "client")
 
 }
