removed old forms

--- a/server/app/views/signIn.scala.html
+++ b/server/app/views/signIn.scala.html
@@ -1,4 +1,4 @@
-@(signInForm: Form[com.mohiva.play.silhouette.core.providers.Credentials])(implicit env: com.mohiva.play.silhouette.core.Environment[User, _], request: RequestHeader)
+@()(implicit env: com.mohiva.play.silhouette.core.Environment[User, _], request: RequestHeader)
 
 @import com.mohiva.play.silhouette.core.providers._
 
