--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -1,17 +1,26 @@
 @(identity: Option[models.User])
 
-@userawarepage("Office Ladder")(identity){
-	<p>
-	@if(identity.isDefined){
-		<p>Hello!</p>
-	} else {
-		<h2>Sign in to start</h2>
-	}
-	</p>
 
+@unathorizedcontent() = {
+	<p>Hello! Sign in to start.</p>
+}
+
+@athorizedcontent(id: models.User) = {
+	<p>Hello @id.firstName!</p>
+
+	<p>
     Scala.js shouts out: <em id="scalajsShoutOut"></em>
     
 	<script src="@routes.Assets.at("client-jsdeps.js")" type="text/javascript"></script>
 	@playscalajs.html.scripts("/assets", projectName = "client")
+	</p>
 
+}
+
+@userawarepage("Office Ladder")(identity){
+	@if(identity.isDefined){
+		@athorizedcontent(identity.get)
+	} else {
+		@unathorizedcontent()
+	}
 }
