--- a/server/app/views/signIn.scala.html
+++ b/server/app/views/signIn.scala.html
@@ -1,6 +1,6 @@
-@()(implicit env: com.mohiva.play.silhouette.core.Environment[User, _], request: RequestHeader)
+@()(implicit env: com.mohiva.play.silhouette.api.Environment[User, _], request: RequestHeader)
 
-@import com.mohiva.play.silhouette.core.providers._
+@import com.mohiva.play.silhouette.impl.providers._
 
 @userawarepage("Sign In")(None) {
     @request.flash.get("error").map { msg =>
@@ -11,7 +11,7 @@
     }
     <fieldset>
         <legend class="col-md-6 col-md-offset-3">Sign in with Oauth2</legend>
-        @defining(env.providers.values.filter(_.isInstanceOf[SocialProvider[_]])) { providers =>
+        @defining(env.providers.values.filter(_.isInstanceOf[SocialProvider])) { providers =>
             @if(!providers.isEmpty) {
                 <div class="social-providers col-md-6 col-md-offset-3">
                     <p>Use your existing account on one of the following services to sign in:</p>
