--- a/server/app/views/base.scala.html
+++ b/server/app/views/base.scala.html
@@ -26,6 +26,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
 </head>
 
 <body>
@@ -58,12 +61,5 @@
 	</div>
 	<!-- /.container -->
 
-
-	<!-- Bootstrap core JavaScript
-    ================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
 </body>
 </html>
