--- a/server/app/views/base.scala.html
+++ b/server/app/views/base.scala.html
@@ -29,6 +29,8 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
+	<script src="@routes.Assets.at("client-jsdeps.js")" type="text/javascript"></script>
+	@playscalajs.html.scripts("/assets", projectName = "client")
 </head>
 
 <body>
@@ -55,7 +57,8 @@
 	<div class="container">
 
 		<div class="starter-template">
-				@content
+		    <div id=client></div>
+			@content
 		</div>
 
 	</div>
