--- a/server/app/views/base.scala.html
+++ b/server/app/views/base.scala.html
@@ -44,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="">Office Ladder</a>
+          <a class="navbar-brand" href="/">Office Ladder</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <span class="navbar-form navbar-right">
